fix configuration method